--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /*!
 Theme Name: Espartadigital
 Theme URI: espartadigital.com
-Author: Jose Manuel
-Author URI: mailto:jose.fernandez@espartadigital.com
+Author: Desarrollo - Esparta Digital
+Author URI: mailto:dev@espartadigital.com
 Description: Wordpress base theme for clients esparta digital
 Version: 1.0.0
 Tested up to: 5.4
