--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /*!
-Theme Name: Espartadigital
+Theme Name: Esparta Digital
 Theme URI: espartadigital.com
-Author: Desarrollo - Esparta Digital
-Author URI: mailto:dev@espartadigital.com
+Author: Dev - Esparta Digital
+Author URI: https://github.com/espartadigital
 Description: Wordpress base theme for clients esparta digital
 Version: 1.0.0
 Tested up to: 5.4
@@ -10,5 +10,5 @@ Requires PHP: 5.6
 License: GNU General Public License v2 or later
 License URI: LICENSE
 Text Domain: espartadigital
-Tags: Esparta Digital
+Tags:  Una columna, Colores personalizados, custom-menu, Logotipo personalizado, Estilo del editor, Imágenes destacadas, Editor del sitio, Patrones del editor de bloques, rtl-language-support, Entrada fija, threaded-comments, translation-ready, Bloques anchos, Estilos del editor de bloques, Variaciones de estilos, Listo para accesibilidad, Blog, Porfolio, Noticias
 */
